tests/fixtures/valid/basic/print_none.py
# Test printing None values
x: None = None
print(x)
print(None)
