tests/fixtures/invalid/pow_none_bool_none.py
# Cannot call pow() with None, Bool, None
x = pow(None, True, None)
